Switching from console app to Express app.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,10 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\index.js",
+            "program": "${workspaceFolder}\\micRecognize.js",
+            "args":["micStreamRecognize"],
             "console": "externalTerminal",
-            "env":{"username": "neo4j", "password":"neo4j"}
+            "env":{"username": "neo4j", "password":"neo4j", "AUDIODEV":"0", "DEBUG":"record"}
         }
     ]
 }
