--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "",
   "main": "neo.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^4.1.2",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
     "neo4j-driver": "^4.1.2",
     "node-record-lpcm16": "^1.0.1",
+    "rotating-file-stream": "^2.1.3",
+    "vash": "^0.13.0",
     "yargs": "^16.0.3"
   }
 }
