--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "neo.js",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +21,8 @@
     "rotating-file-stream": "^2.1.3",
     "vash": "^0.13.0",
     "yargs": "^16.0.3"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2"
   }
 }
