--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/speech": "^4.1.2",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
